--- a/prepros.cfg
+++ b/prepros.cfg
@@ -9,19 +9,6 @@
       "name": "barbershop",
       "path": "",
       "files": {
-        "84572709": {
-          "id": "84572709",
-          "path": "app/img/background.jpg",
-          "output": "app/img/background.jpg",
-          "name": "background.jpg",
-          "category": "IMAGE",
-          "size": 881232,
-          "type": "jpg",
-          "initialSize": 881232,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "89854619": {
           "id": "89854619",
           "path": "app/bower/jquery/src/support.js",
@@ -1863,26 +1850,6 @@
           ],
           "type": "sass"
         },
-        "b2f6c005": {
-          "id": "b2f6c005",
-          "path": "app/css/sections/common.scss",
-          "output": "app/css/sections/common.css",
-          "name": "common.scss",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "eebc5b29"
-          ],
-          "type": "sass"
-        },
         "f81515ce": {
           "id": "f81515ce",
           "path": "app/css/main.css",
@@ -1910,39 +1877,6 @@
           "parents": [],
           "type": "html"
         },
-        "9f00a8cd": {
-          "id": "9f00a8cd",
-          "path": "app/img/icons/user-log.png",
-          "output": "app/img/icons/user-log.png",
-          "name": "user-log.png",
-          "category": "IMAGE",
-          "size": 1196,
-          "type": "png",
-          "initialSize": 1196,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "b19a9a51": {
-          "id": "b19a9a51",
-          "path": "app/css/sections/main.scss",
-          "output": "app/css/sections/main.css",
-          "name": "main.scss",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "eebc5b29"
-          ],
-          "type": "sass"
-        },
         "c18db26b": {
           "id": "c18db26b",
           "path": "app/img/background.png",
@@ -1955,26 +1889,6 @@
           "optimized": false,
           "height": 0,
           "width": 0
-        },
-        "1d7a3240": {
-          "id": "1d7a3240",
-          "path": "app/css/sections/features.scss",
-          "output": "app/css/sections/features.css",
-          "name": "features.scss",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "eebc5b29"
-          ],
-          "type": "sass"
         },
         "693f7e1f": {
           "id": "693f7e1f",
@@ -2001,26 +1915,6 @@
           "optimized": false,
           "height": 0,
           "width": 0
-        },
-        "6ead1590": {
-          "id": "6ead1590",
-          "path": "app/css/sections/index-content.scss",
-          "output": "app/css/sections/index-content.css",
-          "name": "index-content.scss",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "eebc5b29"
-          ],
-          "type": "sass"
         },
         "eb6b22bc": {
           "id": "eb6b22bc",
@@ -2145,6 +2039,96 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "29a92adf": {
+          "id": "29a92adf",
+          "path": "app/price.html",
+          "output": "app/price.html",
+          "name": "price.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "61837f4d": {
+          "id": "61837f4d",
+          "path": "app/css/sections/index.scss",
+          "output": "app/css/sections/index.css",
+          "name": "index.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "eebc5b29"
+          ],
+          "type": "sass"
+        },
+        "9f00a8cd": {
+          "id": "9f00a8cd",
+          "path": "app/img/icons/user-log.png",
+          "output": "app/img/icons/user-log.png",
+          "name": "user-log.png",
+          "category": "IMAGE",
+          "size": 1168,
+          "type": "png",
+          "initialSize": 1168,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "5da10cd7": {
+          "id": "5da10cd7",
+          "path": "app/img/pattern/h-line.png",
+          "output": "app/img/pattern/h-line.png",
+          "name": "h-line.png",
+          "category": "IMAGE",
+          "size": 1694,
+          "type": "png",
+          "initialSize": 1694,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "7a5ee144": {
+          "id": "7a5ee144",
+          "path": "app/img/logo.png",
+          "output": "app/img/logo.png",
+          "name": "logo.png",
+          "category": "IMAGE",
+          "size": 5528,
+          "type": "png",
+          "initialSize": 5528,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "a65a7bf2": {
+          "id": "a65a7bf2",
+          "path": "app/css/sections/inner.scss",
+          "output": "app/css/sections/inner.css",
+          "name": "inner.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "eebc5b29"
+          ],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
