--- a/prepros.cfg
+++ b/prepros.cfg
@@ -9,6 +9,26 @@
       "name": "barbershop",
       "path": "",
       "files": {
+        "89152114": {
+          "id": "89152114",
+          "path": "app/css/sections/modal.scss",
+          "output": "app/css/sections/modal.css",
+          "name": "modal.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "eebc5b29"
+          ],
+          "type": "sass"
+        },
         "89854619": {
           "id": "89854619",
           "path": "app/bower/jquery/src/support.js",
@@ -2110,11 +2130,62 @@
           "height": 0,
           "width": 0
         },
-        "a65a7bf2": {
-          "id": "a65a7bf2",
-          "path": "app/css/sections/inner.scss",
-          "output": "app/css/sections/inner.css",
-          "name": "inner.scss",
+        "c6f176b7": {
+          "id": "c6f176b7",
+          "path": "app/css/sections/price.scss",
+          "output": "app/css/sections/price.css",
+          "name": "price.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "eebc5b29"
+          ],
+          "type": "sass"
+        },
+        "1b778646": {
+          "id": "1b778646",
+          "path": "app/shop.html",
+          "output": "app/shop.html",
+          "name": "shop.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "4df10089": {
+          "id": "4df10089",
+          "path": "app/css/sections/shop.scss",
+          "output": "app/css/sections/shop.css",
+          "name": "shop.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "eebc5b29"
+          ],
+          "type": "sass"
+        },
+        "5540976c": {
+          "id": "5540976c",
+          "path": "app/css/sections/animation.scss",
+          "output": "app/css/sections/animation.css",
+          "name": "animation.scss",
           "category": "CSS",
           "autoCompile": false,
           "autoprefixer": false,
